fuck it for now.. just statically setting it to https

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         #messages li:nth-child(odd) { background: #eee; }
     </style>
      <script src="../../socket.io/socket.io.js"></script>
-    <script src="://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
     <ul id="messages"></ul>
