resoving js dependencies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         #messages li { padding: 5px 10px; }
         #messages li:nth-child(odd) { background: #eee; }
     </style>
-     <script src="../../socket.io/socket.io.js"></script>
+     <script src="https://popurace.herokuapp.com/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
