--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,8 @@
       <input id="txt" autocomplete="off" autofocus="on" placeholder="type your message here..." /><button>Send</button>
     </form>
     <script>
-        var socket = io.connect('http://localhost:8080');
+        var myVar = <%- JSON.stringify(host) %>;
+        var socket = io.connect(myVar);
 
         $('form').submit(function(e){
             e.preventDefault();
