now with homepage login

--- a/views/communities/home.pug
+++ b/views/communities/home.pug
@@ -3,3 +3,23 @@ block content
     ul#messages
     form(action='./', method='post', id='chatForm')
         input(id='txt', autocomplete='off', autofocus='on', placeholder='type your message here...')
+    script.
+        var myVar = '#{ host }';
+        var socket = io.connect(myVar);
+        $('form').submit(function(e){
+            e.preventDefault();
+            socket.emit('chat_message', $('#txt').val());
+            $('#txt').val('');
+            return false;
+        });
+
+        socket.on('chat_message', function(msg){
+            $('#messages').append($('<li>').html(msg));
+        });
+
+        socket.on('is_online', function(username){
+            $('#messages').append($('<li>').html(username));
+        });
+
+        var username = prompt('Enter your username');
+        socket.emit('username', username);
