--- a/views/common/layout.pug
+++ b/views/common/layout.pug
@@ -1,8 +1,8 @@
 doctype html
 html
 	head
-		link(src='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
-		link(src='../../../public/css/global.css', rel='stylesheet')
+		link(href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
+		link(href='/static/css/global.css', rel='stylesheet')
 		script(src='../socket.io/socket.io.js')
 		script(src='//code.jquery.com/jquery-1.10.1.min.js')
 		script(src='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
