--- a/app/components/default/index.pug
+++ b/app/components/default/index.pug
@@ -5,7 +5,7 @@ block content
             .col-lg-4.offset-lg-4
                 form.text-center.border.border-inverse.p-5.signin_form
                     p.h4.mb-4 Sign in
-                    input#defaultLoginFormEmail.form-control.mb-4(type='email', placeholder='E-mail')
+                    input#defaultLoginFormEmail.form-control.mb-4(type='text', placeholder='Username')
                     input#defaultLoginFormPassword.form-control.mb-4(type='password', placeholder='Password')
                     .d-flex.justify-content-around
                         div
