--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,8 +1,38 @@
  * { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; }
-form { background: #fff; padding: 3px; position: fixed; bottom: 0; width: 100%; border-color: #000; border-top-style: solid; border-top-width: 1px;}
-form input { border-style: solid; border-width: 1px; padding: 10px; width: 85%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: 2%; }
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+body {  overflow: hidden; }
+
+
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: #eee; }
+.h-100 { height:100%; }
+#userList { min-height: 100%; }
+#messageViewport { min-height: 100%; height: calc(100vh-20px); }
+
+#content {
+    max-height: calc(100% - 120px);
+    padding: 0px 0px !important;
+    margin-top: 60px !important;
+}
+
+
+header {
+    width: 100%;
+    height: 60px;
+  
+    position: fixed;
+    top: 0;
+}
+
+footer {
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    bottom: 0;
+}
