made it into a button

--- a/app/components/community/index.pug
+++ b/app/components/community/index.pug
@@ -18,7 +18,7 @@ block content
                     form(action='./', method='post', id='chatForm')
                         input(id='txt', class='form-control' autocomplete='off', autofocus='on', placeholder='type your message here...')
                 .col-lg-2.p-2.col-md-2.col-sm-2
-                    button(class='btn btn-primary btn-block') Send
+                    input(type='button' class='btn btn-primary btn-block') Send
 
     script.
         var myVar = '#{ host }';
