--- a/app/components/community/index.pug
+++ b/app/components/community/index.pug
@@ -2,19 +2,20 @@ extends ../common/layout
 block content
     header.bg-dark
         .container-fluid
-            .row.float-right.p-2
+            .row.float-right.p-2.no-gutters
                 a(id="disconnect", href="/" class="btn btn-primary float-right") Leave Chat
     #content
         .continer-fluid
-            .row
+            .row.no-gutters
                 .col-lg-10.col-md-10.col-sm-10
                     ul#messages
-                .col-lg-2.bg-light.col-md-2.col-sm-2
+                div(class="col-lg-2 bg-light col-md-2 col-sm-2" )
                     h5 Users
+                        div#userList
     footer.bg-dark
         form(action='./', method='post', id='chatForm')
             .container-fluid
-                .row
+                .row.no-gutters
                     .col-lg-10.p-2.col-md-10.col-sm-10
                         input(id='txt', class='form-control' autocomplete='off', autofocus='on', placeholder='type your message here...')
                     .col-lg-2.p-2.col-md-2.col-sm-2
@@ -39,6 +40,15 @@ block content
 
         socket.on('is_online', function(username){
             $('#messages').append($('<li>').html(username));
+            
+        });
+
+        socket.on('enter_chat', function(username){
+            $('#userList').append($('<li>').html(username));
+        });
+
+        socket.on('leave_chat', function(username){
+            $('li:contains("'+username+'")').remove();
         });
 
         var username = prompt('Enter your username');
