updates to socket, trying abstract it out to its own thing

--- a/app/components/community/index.pug
+++ b/app/components/community/index.pug
@@ -48,7 +48,7 @@ block content
         });
 
         socket.on('leave_chat', function(username){
-            $('li:contains("'+username+'")').remove();
+        $('#userList > li:contains("'+username+'")').remove();
         });
 
         var username = prompt('Enter your username');
