working with datas now

--- a/app/components/default/index.pug
+++ b/app/components/default/index.pug
@@ -17,6 +17,6 @@ block content
                     button.btn.btn-info.btn-block.my-4(type='submit') Sign in
                     p
                         | Not a member?
-                        a(href='') Register
+                        a(href='/users') Register
                     p
                         a(href="/community") Go to community
