--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
 .signin_form {
     margin-top:100px;
 }
+
+.valid-feedback, .invalid-feedback { margin-top:-1.5rem !important; text-align: left; margin-bottom:1.5rem !important; }
