--- a/app/components/common/layout.pug
+++ b/app/components/common/layout.pug
@@ -3,6 +3,7 @@ html
 	head
 		link(href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
 		link(href='/static/css/global.css', rel='stylesheet')
+		link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
 		script(src='../../../../socket.io/socket.io.js')
 		script(src='//code.jquery.com/jquery-1.10.1.min.js')
 		script(src='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
