--- a/app/components/common/main.pug
+++ b/app/components/common/main.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         link(href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
+        link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
         link(href='/static/css/main.css', rel='stylesheet')
         script(src='//code.jquery.com/jquery-1.10.1.min.js')
         script(src='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
