--- a/app/components/users/views/index.pug
+++ b/app/components/users/views/index.pug
@@ -1,4 +1,4 @@
-extends ../common/main
+extends ../../common/main
 block content
     .container
         .row
@@ -56,6 +56,7 @@ block content
                 }
             });
         });
+        
         $('form').submit(function(e) {
             e.preventDefault();
             
