added dark theme, need to make it switchable.

--- a/app/components/community/views/index.pug
+++ b/app/components/community/views/index.pug
@@ -19,10 +19,10 @@ block content
                     div#userList.p-2
     footer.bg-dark
         form(action='./', method='post', id='chatForm')
-            .container-fluid
+            .container-fluid.no-gutters
                 .row.no-gutters
                     .col-lg-10.p-2.col-md-10.col-sm-10
-                        input(id='txt', class='form-control' autocomplete='off', autofocus='on', placeholder='type your message here...')
+                        input(id='txt', class='form-control' autocomplete='off', autofocus='on', placeholder='Type your message here...')
                     .col-lg-2.p-2.col-md-2.col-sm-2
                         button(class='btn btn-primary btn-block') Send
 
