--- a/app/components/common/layout.pug
+++ b/app/components/common/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		link(href='https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/slate/bootstrap.min.css', rel='stylesheet')
+		link(href='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', rel='stylesheet')
 		link(href='/static/css/global.css', rel='stylesheet')
 		link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet")
 		script(src='../../../../socket.io/socket.io.js')
