--- a/app/components/community/views/index.pug
+++ b/app/components/community/views/index.pug
@@ -1,15 +1,23 @@
 extends ../../common/layout
 block content
-    nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+    nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.align-self-center
         button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContents" aria-controls="navbarContents" aria-expanded="false" aria-label="Toggle navigation")
             span.navbar-toggler-icon
         a.navbar-brand(href="/") Community
-        .collapse.navbar-collapse#navbarContents
-            ul.navbar-nav.mr-auto.mt-2.lt-lg-0.float-right
-                li.nav-item
-                    a.nav-link(href="/") Home
-                li.nav-item
-                    a#logout.nav-link.float-right(href="#") Logout
+        #navbarContents.collapse.navbar-collapse.justify-content-between
+            .navbar-nav
+                a(class="nav-item" href="#") Home
+            .navbar-nav
+                a.nav-link.dropdown-toggle.transparent.btn-transparent(href="#" id="navbarProfileDropdown" data-toggle="dropdown", aria-haspopup="true" aria-expanded="false")
+                    img(src="https://randomuser.me/api/portraits/men/65.jpg", class="avatar rounded-circle", alt="MikeS") 
+                    | #{session.username}
+                .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarProfileDropdown")
+                    a(class="dropdown-item" href="#") Edit Profile
+                    a(class="dropdown-item" href="#") Settings
+                    .dropdown-divider
+                    a(class="dropdown-item" href="" id="logout") Logout
+
+            
     #content.h-100
         .continer-fluid.h-100
             .row.no-gutters.h-100
