--- a/public/css/global.css
+++ b/public/css/global.css
@@ -4,6 +4,8 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color:#272B30;
+    color:#CCCCCC;
 }
 
 #messages { list-style-type: none; margin: 0; padding: 0; }
@@ -20,25 +22,26 @@ html, body {
     margin-top: 0px !important;
 }
 
+.btn-transparent {
+    background: transparent;
+    border:0px;
+}
+#userList {
+    color: #7FC1E8;
+    
+}
+
 .bg-light { 
     background-color: #1e2125 !important;
 }
-
-footer.bg-dark { 
-    background-color: #1e2125 !important;
-}
-
-#txt {
-    width: 100%;
-    background-color: #1e2125 !important;
-    border: 0px;
-    border-radius: 0px;
+.avatar {
+    width: 30px;
+    margin-right: 5px;
 }
 
 header {
     width: 100%;
     height: 60px;
-  
     position: fixed;
     top: 0;
 }
