added some nav, cleaning things up

--- a/app/components/users/views/index.pug
+++ b/app/components/users/views/index.pug
@@ -2,7 +2,7 @@ extends ../../common/main
 block content
     .container
         .row
-            .col-lg-4.offset-lg-4
+            .col-lg-6.offset-lg-3
                 form.text-center.border.border-inverse.p-5.signin_form
                     p.h4.mb-4 Create Account
                     p Create your free account, fill in the form below.
@@ -15,7 +15,8 @@ block content
                     input#password-again.form-control.mb-4(type='password', placeholder='Password Again')
                     .d-flex.justify-content-around
                     button.btn.btn-info.btn-block.my-4(type='submit', id='create_account') Create Account
-
+                    p.mb-4
+                        a(href="/",) Back to login
     script.
 
         let host_url = '#{ host }';
