--- a/app/components/common/main.pug
+++ b/app/components/common/main.pug
@@ -7,6 +7,7 @@ html
         script(src='//code.jquery.com/jquery-1.10.1.min.js')
         script(src='//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
     body
-       block content
+        include navigation.pug
+        block content
         footer
             block footer
