--- a/app/components/common/navigation.pug
+++ b/app/components/common/navigation.pug
@@ -6,6 +6,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.align-self-center
         #navbarContents.collapse.navbar-collapse.justify-content-center
             ul.navbar-nav.ml-auto
                 li.li.nav-item.mr-3
-                    a.nav-link(href=host + "/signin") Sign in
+                    a.nav-link(href="/signin") Sign in
                 li.nav-item
-                    a.nav-link.btn.btn-outline-primary.text-primary(href= host + "/getstarted") Get Started
+                    a.nav-link.btn.btn-outline-primary.text-primary(href= "/getstarted") Get Started
