--- a/app/components/common/navigation.pug
+++ b/app/components/common/navigation.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light.align-self-center
+nav.navbar.navbar-expand-lg.navbar-light.bg-light.align-self-center.bg-info
     .container
         button(class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContents" aria-controls="navbarContents" aria-expanded="false" aria-label="Toggle navigation")
             span.navbar-toggler-icon
@@ -6,6 +6,6 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.align-self-center
         #navbarContents.collapse.navbar-collapse.justify-content-center
             ul.navbar-nav.ml-auto
                 li.li.nav-item.mr-3
-                    a.nav-link(href="/signin") Sign in
+                    a.nav-link(href="/sign-in") Sign in
                 li.nav-item
-                    a.nav-link.btn.btn-outline-primary.text-primary(href= "/getstarted") Get Started
+                    a.nav-link.btn.btn-outline-primary.text-primary(href= "/get-started") Get Started
