--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,3 +3,12 @@
 }
 
 .valid-feedback, .invalid-feedback { margin-top:-1.5rem !important; text-align: left; margin-bottom:1.5rem !important; }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
